--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   "author": "Code In Progress",
   "license": "ISC",
   "dependencies": {
+    "applicationinsights": "^1.8.10",
+    "body-parser": "^1.18.3",
+    "cheerio": "^1.0.0-rc.5",
     "csv-writer": "^1.2.0",
-    "ws": "^6.2.0",
-    "mysql": "^2.0.0",
+    "express": "^4.16.4",
+    "got": "^11.8.1",
     "influx": "^5.0.7",
-    "sprintf-js":"^1.1.2",
-    "express":"^4.16.4",
+    "mysql": "^2.0.0",
     "request": "^2.88.0",
-    "body-parser":"^1.18.3"
+    "sprintf-js": "^1.1.2",
+    "tough-cookie": "^4.0.0",
+    "tunnel": "0.0.6",
+    "ws": "^6.2.0"
   }
 }
