add secret hash, fix typo

--- a/charts/hubitat-log-forwarder/templates/deployment.yaml
+++ b/charts/hubitat-log-forwarder/templates/deployment.yaml
@@ -13,10 +13,8 @@ spec:
       {{- include "hubitat-log-forwarder.selectorLabels" . | nindent 6 }}
   template:
     metadata:
-      {{- with .Values.podAnnotations }}
       annotations:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
+        checksum/secret: {{ include (print $.Template.BasePath "/secrets.yaml") . | sha256sum }}
       labels:
         {{- include "hubitat-log-forwarder.selectorLabels" . | nindent 8 }}
     spec:
@@ -35,6 +33,9 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+          envFrom:
+          - secretRef:
+              name: log-forwarder
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
