--- a/charts/hubitat-log-forwarder/templates/secrets.yaml
+++ b/charts/hubitat-log-forwarder/templates/secrets.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: log-forwarderd
-  
+  name: log-forwarder
+
 stringData:
   HUBITAT_USERNAME: {{ .Values.secrets.hubitat.username }}
   HUBITAT_PASSWORD: {{ .Values.secrets.hubitat.password }}
